boran kompresovane slike

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,6 @@
 		<div class='hero'>
 			<picture>
 			  <source srcset="assets/images/cover-photo.jpg" media="(min-width: 1024px)">
-			  <source srcset="https://dummyimage.com/768x960/a0a0a0/000.jpg" media="(min-width: 768px)">
 			  <img srcset="assets/images/cover-mobile.jpg" alt='slide'>
 			</picture>
 
@@ -92,7 +91,6 @@
 				<div class='saradnja-img'>
 					<picture>
 						  <source srcset="assets/images/start-desktop.jpg" media="(min-width: 1024px)">
-						  <source srcset="https://dummyimage.com/480x480/000/fff.jpg" media="(min-width: 768px)">
 						  <img srcset="assets/images/start-mobile.jpg" alt="slide">
 					</picture>
 					<div class='circle-numerator circle-numerator--normal'>
@@ -118,9 +116,8 @@
 			<div class='container-01 float-l'>
 				<div class='saradnja-img'>
 					<picture>
-						  <source srcset="assets/images/delo-desktop.jpg" media="(min-width: 1024px)">
-						  <source srcset="https://dummyimage.com/480x480/000/fff.jpg" media="(min-width: 768px)">
-						  <img srcset="assets/images/delo-mobile.jpg" alt="slide">
+						  <source srcset="assets/images/postura.jpg" media="(min-width: 1024px)">
+						  <img srcset="assets/images/postura-mobile.jpg" alt="slide">
 					</picture>
 					<div class='circle-numerator circle-numerator--inverse'>
 						<p>02</p>
@@ -160,7 +157,6 @@
 				<div class='saradnja-img'>
 					<picture>
 						  <source srcset="assets/images/plan-desktop.jpg" media="(min-width: 1024px)">
-						  <source srcset="https://dummyimage.com/480x480/000/fff.jpg" media="(min-width: 768px)">
 						  <img srcset="assets/images/plan-mobile.jpg" alt="slide">
 					</picture>
 					<div class='circle-numerator circle-numerator--normal'>
@@ -198,7 +194,6 @@
 				<div class='saradnja-img'>
 					<picture>
 						  <source srcset="assets/images/ishrana-desktop.jpg" media="(min-width: 1024px)">
-						  <source srcset="https://dummyimage.com/480x480/000/fff.jpg" media="(min-width: 768px)">
 						  <img srcset="assets/images/ishrana-mobile.jpg" alt="slide">
 					</picture>
 					<div class='circle-numerator circle-numerator--inverse'>
@@ -254,7 +249,6 @@
 				<div class='saradnja-img'>
 					<picture>
 						  <source srcset="assets/images/delo-desktop.jpg" media="(min-width: 1024px)">
-						  <source srcset="https://dummyimage.com/480x480/000/fff.jpg" media="(min-width: 768px)">
 						  <img srcset="assets/images/delo-mobile.jpg" alt="slide">
 					</picture>
 					<div class='circle-numerator circle-numerator--normal'>
@@ -453,10 +447,10 @@
 			</div>
 			<!-- TRENER 02 DIJANA -->
 			<div class='mo-trener'>
-				<img src='assets/images/boran.jpg' alt='boran bradic'/>
+				<img src='assets/images/diana.jpg' alt='boran bradic'/>
 				<div class='body'>
 					<div class='description'>
-						<h3 class='mo-trener-title'>Diana Bradić<span class='position'>Lični trener</span></h3>
+						<h3 class='mo-trener-title'>Diana Maksimović<span class='position'>Lični trener</span></h3>
 						
 						<p>
 							Još kao tinejdžer sam, baveći se profesionalno atletikom, uvidela da je sve više nedovoljno stručnih trenera koji kroz sportiste pokušavaju da ostvare svoje lične ciljeve, zanemarujući ono sto je glavno, a to su zdrav fizički i psihički razvoj pojedinca. Treniranje atletike je delom bilo potkrepljeno uverenjima i obećanjima trenera da mogu da postignem velike uspehe, a rezultiralo je razočarenjima i brojnim povredama. Pored velike ljubavi prema sportu, ali sa stanjima i povredama za koje treneri nisu bili dovoljno stručni da pomognu, odlučujem da nastavim da treniram samostalno i da shodno ličnim interesovanjima nastavim svoje obrazovanje. Po završetku srednje škole opredeljujem se za Visoku zdravstvenu školu strukovnih studija u Beogradu, odsek strukovni fizioterapeut, čiji sam danas apsolvent. 
