--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
 	<title>NO EXCUSES</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="assets/images/logo-red.png" />
-	
 
-	<link rel="stylesheet" type="text/css" href="css/master-css.css">
+
+	<!--<link rel="stylesheet" type="text/css" href="css/master-css.css">-->
 	
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,700,900&amp;subset=latin-ext" rel="stylesheet">
 
@@ -37,13 +37,12 @@
 					<a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a>
 				</div>
 			</div>
-			
 
 			<div class='burger'>
 				<i class="fa fa-bars" aria-hidden="true"></i>
 			</div>
-
 		</nav>
+
 
 		<div class='hero'>
 			<picture>
@@ -516,6 +515,7 @@
 	<section>
 		<div id='map'></div>
 	</section>
+	<link rel="preload" href="css/master-css.css" as="style" onload="this.rel='stylesheet'">
 <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
