--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 					<li><a class='link' href='#home'>Početna</a></li>
 					<li><a class='link' href='#saradnja'>Saradnja</a></li>
 					<li><a class='link' href='#cenovnik'>Cenovnik</a></li>
-					<li><a class='link' href='#tim'>Naš Tim</a></li>
+					<li><a class='link' href='#tim'>O nama</a></li>
 					<li><a class='link link--last' href='#kontakt'>Kontakt</a></li>
 				</ul>
 
@@ -188,7 +188,7 @@
 					</p>
 
 					<p class='saradnja-text text--bold'>
-						Zato je svaki naš plan treninninga sastavljen prema vašim individualnim potrebama, iako svi planovi sadrže neke zajedničke elemente.
+						Zato je svaki naš plan treninga sastavljen prema vašim individualnim potrebama, iako svi planovi sadrže neke zajedničke elemente.
 					</p>
 
 				</div>
@@ -235,18 +235,18 @@
 						</li>
 
 						<li class='numerator numerator--middle clearfix'>
-							<p class='number' >2</p>
+							<p class='number'>2</p>
 							<p class='list-body'>
-								AKTUELNOST
-								<span>Plan mora biti aktuelan i u skladu sa<br>najnovijim zaključcima nutricionističke nauke.</span>
+								REZULTATI
+								<span>Plan mora da donosi rezultate.</span>
 							</p>
 						</li>
 
 						<li class='numerator clearfix'>
-							<p class='number'>3</p>
+							<p class='number' >3</p>
 							<p class='list-body'>
-								REZULTATI
-								<span>Plan mora da donosi rezultate.</span>
+								AKTUELNOST
+								<span>Plan mora biti aktuelan i u skladu sa<br>najnovijim zaključcima nutricionističke nauke.</span>
 							</p>
 						</li>
 					</ul>
@@ -475,7 +475,7 @@
 
 						<p>
 							Na početku studija dobijam priliku da radim u jednoj od boljih privatnih ordinacija za fizikalnu medicinu i rehabilitaciju i na taj način stičem dragoceno trogodišnje iskustvo.
-							Kroz same treninge, rad u klinici i studije, koje su podrazumevale praksu u gotovo svim drzavnim zdravstvenim ustanovama, uviđam sve više propusta, kako trenera, tako i fizioterapeuta i fizijatara.  Naime, to mu dođe kao začarani krug. Treneri se uglavnom fokusiraju na trenutne rezultate, ne mareći dovoljno na formu izvođenja vežbe i patološka stanja koja mozda time razvijaju kod vežbača. Potom problem prelazi u ruke fizijatara i fizioterapeuta koji se često isuviše oslanjaju na tehničke inovacije i aparaturu, što svakako ima svoju primenu, ali neretko ne rešava problem u srži. Propusti su upravo zanemarivanje držanja tela, nedovoljna svest o važnosti same posture na biomehaniku pokreta i neeliminisanje loših navika. Ne zaboravimo koliko je bitna edukacija za koju često nemaju znanja, živaca niti vremena. Bez razumevanja patologije svog stanja i razloga koji su doveli do njegovog formiranja, nemoguće je izbeći iste ili slične stimuluse u budućnosti. Ljudi se često, sa prestankom bola, vraćaju starim navikama bez ikakvog boljeg razumevanja problematike, očekujući drugačiji ishod, što nas vraća na početak novog kruga, a sve bliže hroničnom stanju.
+							Kroz same treninge, rad u klinici i studije, koje su podrazumevale praksu u gotovo svim drzavnim zdravstvenim ustanovama, uviđam sve više propusta, kako trenera, tako i fizioterapeuta i fizijatara.  Naime, to mu dođe kao začarani krug. Treneri se uglavnom fokusiraju na trenutne rezultate, ne mareći dovoljno na formu izvođenja vežbe i patološka stanja koja možda time razvijaju kod vežbača. Potom problem prelazi u ruke fizijatara i fizioterapeuta koji se često isuviše oslanjaju na tehničke inovacije i aparaturu, što svakako ima svoju primenu, ali neretko ne rešava problem u srži. Propusti su upravo zanemarivanje držanja tela, nedovoljna svest o važnosti same posture na biomehaniku pokreta i neeliminisanje loših navika. Ne zaboravimo koliko je bitna edukacija za koju često nemaju znanja, živaca niti vremena. Bez razumevanja patologije svog stanja i razloga koji su doveli do njegovog formiranja, nemoguće je izbeći iste ili slične stimuluse u budućnosti. Ljudi se često, sa prestankom bola, vraćaju starim navikama bez ikakvog boljeg razumevanja problematike, očekujući drugačiji ishod, što nas vraća na početak novog kruga, a sve bliže hroničnom stanju.
 						</p>
 
 						<p>
@@ -497,7 +497,7 @@
 			<div class='col-01'>
 				<div class='kontakt-info'>
 					<ul>
-						<li><span class='kontakt-tip'>Telefon</span> <span class='kontakt-data'>+381 64 36 63 799</span></li>
+						<li><span class='kontakt-tip'>Telefon</span> <span class='kontakt-data'>+381 64 3663 799</span></li>
 						<li><span class='kontakt-tip'>Email</span> <span class='kontakt-data'>boran.filipi@noexcuses.rs</span></li>
 						<li><span class='kontakt-tip'>Email</span> <span class='kontakt-data'>diana.maksimovic@noexcuses.rs</span></li>
 					</ul>
