--- a/app/index.html
+++ b/app/index.html
@@ -147,7 +147,7 @@
 					</p>
 
 					<p class='saradnja-text text--bold'>
-						Naime, većina ljudi danas ima barem neki posturalni disbalans i nefunkcionalnost u kretanju, međutim odlučuje se zatražiti pomoć tek kada ovaj problem postane jako uočljiv ili praćen bolom, odnosno, kada je znatna šteta već načinjena.
+						Naime, većina ljudi danas ima barem neki posturalni disbalans i nefunkcionalnost u kretanju, međutim, odlučuje se zatražiti pomoć tek kada ovaj problem postane jako uočljiv ili praćen bolom, odnosno, kada je znatna šteta već načinjena.
 					</p>
 
 					<p class='saradnja-text'>
@@ -497,7 +497,7 @@
 			<div class='col-01'>
 				<div class='kontakt-info'>
 					<ul>
-						<li><span class='kontakt-tip'>Telefon</span> <span class='kontakt-data'>+381 64 3663 799</span></li>
+						<li><span class='kontakt-tip'>Telefon</span> <span class='kontakt-data'>+381 64 229 5553</span></li>
 						<li><span class='kontakt-tip'>Email</span> <span class='kontakt-data'>boran.filipi@noexcuses.rs</span></li>
 						<li><span class='kontakt-tip'>Email</span> <span class='kontakt-data'>diana.maksimovic@noexcuses.rs</span></li>
 					</ul>
