--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
 		<div class='hero'>
 			<picture>
 			  <source srcset="assets/images/cover-photo.jpg" media="(min-width: 1024px)">
-			  <img srcset="assets/images/cover-mobile.jpg" alt='slide'>
+			  <img srcset="assets/images/cover-mobile.jpg" alt='workout'>
 			</picture>
 
 			<div class='hero-content'>
@@ -114,7 +114,7 @@
 					<p class='saradnja-text saradnja-text--special text--bold'>
 					Ključna reč je:
 					</p>
-					<p class='label label--underline'>Individualizacija</p>
+					<p class='label'>Individualizacija</p>
 				</div>
 			</div>
 		</div>
