--- a/app/index-production.html
+++ b/app/index-production.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/png" href="assets/images/logo-red.png" />
 
 
-	<link rel="stylesheet" type="text/css" href="css/master-css.css">
+	<link rel="stylesheet" type="text/css" href="css/master-css-min.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,700,900&amp;subset=latin-ext" rel="stylesheet">
 
@@ -481,7 +481,7 @@
 			<div class='col-01'>
 				<div class='kontakt-info'>
 					<ul>
-						<li><span class='kontakt-tip'>Telefon</span> <span class='kontakt-data'>+381 64 3663 799</span></li>
+						<li><span class='kontakt-tip'>Telefon</span> <span class='kontakt-data'>+381 64 229 5553</span></li>
 						<li><span class='kontakt-tip'>Email</span> <span class='kontakt-data'>boran.filipi@noexcuses.rs</span></li>
 						<li><span class='kontakt-tip'>Email</span> <span class='kontakt-data'>diana.maksimovic@noexcuses.rs</span></li>
 					</ul>
